--- a/static/css/site.css
+++ b/static/css/site.css
@@ -24,50 +24,28 @@
   --blue-deep:     rgb(19, 77, 104);
 }
 
-
-
 * {
   padding: 0;
   margin: 0;
 }
 
 a {
-  /* color:  */
   color: var(--blue-base);
 }
 
 body {
+  
+  /* typography */
   font-family: Inter, Arial, Helvetica, sans-serif;
-  header {
-    
-    background: var(--black);
-    padding: 0.5rem;
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
 
-    img {
-      width: 400px;
-    }
+  /* Global Layout */
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 
-    nav {
-      margin-left: auto;
-      display: flex;
-      align-items: stretch;
-      gap: 2rem;
-      padding-right: 2rem;
-      a {
-        display: flex;
-        align-items: center;
-        padding: 0 1 rem;
-        
-        text-decoration: none;
-        color: white;
-        font-weight: 200;
-      }
-    }
-  }
 
+  
   section#banner {
     background: rgb(238, 238, 238);
 
@@ -130,12 +108,48 @@ body {
     }
   }
 
-  footer {
-    background: #252525;
-    padding: 0.5rem;
-    color: white;
-    .content {
-      padding: 10% 10%;     
+  
+}
+
+body header {
+    
+  background: var(--black);
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+
+  img {
+    width: 400px;
+  }
+
+  nav {
+    margin-left: auto;
+    display: flex;
+    align-items: stretch;
+    gap: 2rem;
+    padding-right: 2rem;
+    a {
+      display: flex;
+      align-items: center;
+      padding: 0 1 rem;
+      
+      text-decoration: none;
+      color: white;
+      font-weight: 200;
     }
+  }
+}
+
+body main {
+  flex: 1; 
+}
+
+body footer {
+  background: #252525;
+  padding: 0.5rem;
+  color: white;
+  .content {
+    padding: 0.5rem 10%;     
   }
 }
