--- a/static/css/site.css
+++ b/static/css/site.css
@@ -302,6 +302,7 @@ section#resources h1 {
 section#about nav {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 0.75rem;
   margin-top: 2rem;
 }
