--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
       <a href="/our-vision">Our Vision</a>
       <a href="/board-officers">Leadership</a>
       <a href="/accomplishments">Accomplishments</a>
-      <a href="/gallery">Gallery</a>
+      <!-- <a href="/gallery">Gallery</a> -->
     </div>
   </div>
 
