--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -1,6 +1,6 @@
 <h1>About the JSQCA</h1>
 <p>The Journal Square Community Association's mission is to promote a clean, green, and safe Journal Square. We advocate for the rights and interests of residents and celebrate the rich history of the area. Our non-profit association is open to all residents of Jersey City. Come join us, meet your neighbors, and find out what's happening in this vibrant community.</p>
-<img src="https://picsum.photos/seed/jsqca-community/1200/400" alt="Community meeting placeholder" class="about-photo" loading="lazy" />
+<img src="/static/img/bsq-day.jpg" alt="A street shot of Bergen Square Day" class="about-photo" loading="lazy" />
 <nav>
   <a href="/our-vision">Our Vision</a>
   <a href="/accomplishments">Our Accomplishments</a>
