--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="page-content">
+<section class="page-content reveal">
   <div class="content">
     <h1>{{ page.title }}</h1>
     {{ content }}
